force-app/main/default/objects/UIConfiguration__c/UIConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This will store record type settings for OH screens.</description>
    <label>UI Configuration</label>
</CustomObject>