force-app/main/default/objects/UIConfiguration__c/fields/ProjectLockedRecordType__c.field-meta.xml
<CustomField>
    <fullName>ProjectLockedRecordType__c</fullName>
    <label>Project Locked RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>