force-app/main/default/objects/UIConfiguration__c/fields/ProjectRecordtypePattern__c.field-meta.xml
<CustomField>
    <fullName>ProjectRecordtypePattern__c</fullName>
    <label>Project Recordtype Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>