force-app/main/default/objects/UIConfiguration__c/fields/ProjectServiceLockedRecordType__c.field-meta.xml
<CustomField>
    <fullName>ProjectServiceLockedRecordType__c</fullName>
    <label>Project Service Locked RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>