force-app/main/default/objects/UIConfiguration__c/fields/ProjectServiceRecordtypePattern__c.field-meta.xml
<CustomField>
    <fullName>ProjectServiceRecordtypePattern__c</fullName>
    <label>Project Service Recordtype Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>